# box-ollama

./: README.md  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: App Build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/assets/: index.css
src/components/: AppBar.vue  AppSettingsDialog.vue  ChatContainer.vue  ChatMessage.vue
src/components/ui/button/: Button.vue
src/lib/: constants.ts  utils.ts
src/services/: ollama.ts
